--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lib/index.js"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint .",
+    "test": "npm run lint"
   },
   "repository": "tailify/browserslist-config",
   "keywords": [
@@ -17,6 +18,10 @@
   "license": "UNLICENSED",
   "bugs": "https://github.com/tailify/browserslist-config/issues",
   "homepage": "https://github.com/tailify/browserslist-config#readme",
+  "devDependencies": {
+    "eslint": "^5.10.0",
+    "eslint-plugin-node": "^8.0.0"
+  },
   "engines": {
     "node": ">=8"
   },
