--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   ],
   "scripts": {
     "lint": "eslint .",
-    "test": "npm run lint"
+    "test": "npm run lint && npm run test-only",
+    "test-only": "jest"
   },
   "repository": "tailify/browserslist-config",
   "keywords": [
@@ -19,8 +20,11 @@
   "bugs": "https://github.com/tailify/browserslist-config/issues",
   "homepage": "https://github.com/tailify/browserslist-config#readme",
   "devDependencies": {
+    "browserslist": "^4.3.0",
     "eslint": "^5.10.0",
-    "eslint-plugin-node": "^8.0.0"
+    "eslint-plugin-jest": "^22.1.0",
+    "eslint-plugin-node": "^8.0.0",
+    "jest": "^23.6.0"
   },
   "engines": {
     "node": ">=8"
