--- a/package.json
+++ b/package.json
@@ -24,11 +24,12 @@
     "@tailify/prettier-config": "^1.0.0",
     "browserslist": "^4.3.0",
     "eslint": "^6.0.0",
+    "eslint-plugin-jest": "^23.8.2",
     "jest": "^24.7.0",
     "prettier": "^1.15.0"
   },
   "engines": {
-    "node": ">=8"
+    "node": ">=10.20.1"
   },
   "greenkeeper": {
     "commitMessages": {
