--- a/package.json
+++ b/package.json
@@ -22,26 +22,17 @@
   "devDependencies": {
     "@tailify/eslint-config-legacy": "^7.0.0",
     "@tailify/prettier-config": "^1.0.0",
-    "browserslist": "^4.3.0",
+    "browserslist": "^4.11.1",
     "eslint": "^6.0.0",
     "eslint-plugin-jest": "^23.8.2",
     "jest": "^25.3.0",
     "prettier": "^1.15.0"
   },
+  "peerDependencies": {
+    "browserslist": "^4.11.1"
+  },
   "engines": {
     "node": ">=10.20.1"
-  },
-  "greenkeeper": {
-    "commitMessages": {
-      "dependencyUpdate": "Update ${dependency} to version ${version}",
-      "devDependencyUpdate": "Update ${dependency} to version ${version}",
-      "dependencyPin": "Pin ${dependency} to ${oldVersion}",
-      "devDependencyPin": "Pin ${dependency} to ${oldVersion}"
-    },
-    "prTitles": {
-      "basicPR": "Update ${dependency} to the latest version",
-      "groupPR": "Update ${dependency} in group ${group} to the latest version"
-    }
   },
   "publishConfig": {
     "access": "public"
